# rusty-server

./: .gitignore  Cargo.toml  Makefile  Readme.md  docker-compose.yml
server/: Cargo.toml  Dockerfile
server/migration/src/: lib.rs  m20230801_141102_create_user_table.rs  m20230802_091400_make_email_unique.rs
server/src/: main.rs
server/src/core/: authorizer_middleware.rs  input_validation_middleware.rs  mod.rs  repository.rs
server/src/helpers/: http_response.rs
server/src/modules/: mod.rs  router.rs
server/src/modules/health_check/: controller.rs  router.rs
server/src/modules/user/: controller.rs  mod.rs  model.rs  repository.rs  router.rs  serializer.rs  service.rs
src/: main.rs
src/modules/: mod.rs  router.rs
src/modules/health_check/: controller.rs  router.rs
src/services/: http_response.rs
