[package]
name = "rusty-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
hyper = "0.14.27"
tower = { version = "0.4.13", features = ["full"] }
serde = { version = "1.0.177", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "fmt",
] }
reqwest = "0.11.18"
serde_json = "1.0.104"
