[package]
name = "rusty-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
hyper = "0.14.27"
tower = { version = "0.4.13", features = ["full"] }
serde = { version = "1.0.177", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "fmt",
] }
reqwest = "0.11.18"
serde_json = "1.0.104"
tower-http = { version = "0.4.3", features = ["full"] }
tracing = "0.1.37"
sea-orm = { version = "0.12.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "postgres-array",
    "debug-print",
    "with-chrono",
    "with-uuid",
    "with-json",
] }
migration = { path = "migration" }
axum-macros = "0.3.8"
validator = { version = "0.16.1", features = ["derive"] }
